<resources>
    <string name="app_name">tp_37</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="age">Âge</string>
    <string name="domaineComp">Domaine de compétences</string>
    <string name="numeroTel">Numéro de téléphone</string>
    <string name="envoyer">Envoyer</string>
    <string name="title">Information personnelle</string>
    <string name="titlePhonePage">Téléphone</string>
    <string name="back">Retour</string>
    <string name="ok">D\'accord</string>
    <string name="yes">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="call">Appeler</string>
    <string name="confirmationTitle">Confirmation</string>
    <string name="confirmationMessage">Êtes-vous sûr de vouloir soumettre ces informations ?</string>
</resources>